lkt/bootstrap/src/liblktlang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef struct lkt_base_node__struct *lkt_base_node;
/*
 * Reference to a symbol. Symbols are owned by analysis contexts, so they must
 * not outlive them. This type exists only in the C API, and roughly wraps the
 * corresponding Ada type (an array fat pointer).
 */
typedef struct {
   uint32_t thin_sym;
   void *table;
} lkt_symbol_type;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *lkt_string_type;
typedef uint8_t lkt_bool;
        



    typedef struct {
            lkt_internal_metadata md;
            lkt_env_rebindings_type rebindings;
            lkt_bool from_rebound;
    } lkt_internal_entity_info;
        



    typedef struct {
            lkt_base_node node;
            lkt_internal_entity_info info;
    } lkt_node;
        



/*
 * Return True if the return type of this function is instantiated.
 */
extern int lkt_decl_p_return_type_is_instantiated(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * Return True if Self is an instantiated declaration, meaning that it does not
 * use any of its declared generic types.
 */
extern int lkt_decl_p_is_instantiated(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * Return the symbol corresponding to the name of this declaration.
 */
extern int lkt_decl_p_name(
    lkt_node *node,


    lkt_symbol_type *value_p
);
        



/*
 * Return the full name of this decl, as it should be seen by users/shown in
 * diagnostics.
 */
extern int lkt_decl_p_full_name(
    lkt_node *node,


    lkt_string_type *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_base_grammar_rule_decl_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_explicitly_typed_decl_f_decl_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_component_decl_f_default_val(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_field_decl_f_trait_ref(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_fun_param_decl_f_decl_annotations(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_val_decl_f_expr(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_fun_decl_f_params(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``lkt_function_type_ref``, ``lkt_generic_type_ref``, ``lkt_simple_type_ref``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_fun_decl_f_return_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_fun_decl_f_trait_ref(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_any_of``,
 * ``lkt_array_literal``, ``lkt_bin_op``, ``lkt_block_expr``,
 * ``lkt_call_expr``, ``lkt_cast_expr``, ``lkt_dot_expr``,
 * ``lkt_error_on_null``, ``lkt_generic_instantiation``, ``lkt_if_expr``,
 * ``lkt_isa``, ``lkt_keep_expr``, ``lkt_lambda_expr``, ``lkt_lit``,
 * ``lkt_logic_assign``, ``lkt_logic_expr``, ``lkt_logic_predicate``,
 * ``lkt_logic_propagate``, ``lkt_logic_unify``, ``lkt_match_expr``,
 * ``lkt_not_expr``, ``lkt_paren_expr``, ``lkt_raise_expr``, ``lkt_ref_id``,
 * ``lkt_subscript_expr``, ``lkt_try_expr``, ``lkt_un_op``
 *
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_fun_decl_f_body(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When this property is used as a a combinder inside an NPropagate equation,
 * return whether it expects a dynamic number of arguments.
 */
extern int lkt_fun_decl_p_is_dynamic_combiner(
    lkt_node *node,


    lkt_bool *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_env_spec_decl_f_actions(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_generic_decl_f_generic_param_decls(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field can contain one of the following nodes: ``lkt_dyn_var_decl``,
 * ``lkt_env_spec_decl``, ``lkt_field_decl``, ``lkt_fun_decl``,
 * ``lkt_generic_decl``, ``lkt_grammar_decl``, ``lkt_grammar_rule_decl``,
 * ``lkt_lexer_decl``, ``lkt_named_type_decl``, ``lkt_val_decl``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_generic_decl_f_decl(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_grammar_decl_f_rules(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``lkt_full_decl``, ``lkt_lexer_case_rule``
 *
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_lexer_decl_f_rules(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_lexer_family_decl_f_rules(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_type_decl_f_traits(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * This field may be null even when there are no parsing errors.
 */
extern int lkt_type_decl_f_syn_base_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the base type for this node, if any.
 */
extern int lkt_type_decl_p_base_type(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * Return the base type for this node, if any.
 */
extern int lkt_type_decl_p_base_type_if_entity(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_generic_param_type_decl_f_has_class(
    lkt_node *node,


    lkt_node *value_p
);
        



/*
 * When there are no parsing errors, this field is never null.
 */
extern int lkt_named_type_decl_f_decls(
    lkt_node *node,


    lkt_node *value_p
);